Bug 236546 newlines not added when copying table into clipboard with CTRL+mouse. patch by Jeff Schiller<codedread@gmail.com> r+sr=jst